# naive-state-machine

./: README.md  pyproject.toml
examples/: elements.py  traffic_light.py
naivesm/: exceptions.py  models.py  statemachine.py
