[tool.poetry]
name = "naivesm"
version = "0.1.0"
description = "Implementation of a naive state machine"
authors = ["chris220688 <13407893+kolitiri@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
